--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta name="author" content="github.com/amateratsoo">
     <meta name="description" content="login page case study with dark mode feature">
 
-    <title>Lighthouse</title>
+    <title>Solarized</title>
 
-    <link rel="shortcut icon" href="public/icons/favicon-dark-scheme.png" type="image/x-icon" class="favicon" />
+    <link rel="shortcut icon" href="public/logo.svg" type="image/x-icon" />
     <link rel="stylesheet" href="src/styles/index.css" />
 
     <script src="https://unpkg.com/phosphor-icons"></script>
@@ -26,7 +26,7 @@
 
       <header>
         <div class="logo-container">
-          <img src="public/icons/logo.png" alt="brand logo">
+          <img src="public/logo.svg" alt="brand logo">
         </div>
 
         <h1>Login</h1>
@@ -61,13 +61,18 @@
           <input type="checkbox" id="keep-me-logged-in">
         </article>
 
-        <button type="submit">Login</button>
+        <div class="submit-btn-wrapper">
+          <button type="submit">Login</button>
+        </div>
       </form>
 
       <footer><p>Don't have an account?</p>&nbsp;<a href="" class="special-link">Register</a></footer>
       <div class="dark-theme-wrapper"></div>
     </section>
-    <article class="decorative-img"></article>
+
+    <article class="decorative-img">
+      <canvas class="mesh" data-transition-in ></canvas>
+    </article>
   </body>
 
 </html>
